--- a/sampleTest.api/appsettings.json
+++ b/sampleTest.api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"DefaultConnection": "Data Source=Server=DESKTOP-9O842AL\\SQL_2014;Initial Catalog=SampleTestDb;Persist Security Info=True;User ID=damlademir;Password=1234;MultipleActiveResultSets=True;Connect Timeout=360;pooling=true;",
+    "DefaultConnection": "server=DESKTOP-9O842AL\\SQL_2014;database=SampleTestDb;trusted_connection=true;"
+  }
 }
