continued the integration and unit tests.

--- a/sampleTest.api.integrationTest/sampleTest.api.integrationTest.csproj
+++ b/sampleTest.api.integrationTest/sampleTest.api.integrationTest.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\sampleTest.api\sampleTest.api.csproj" />
+    <ProjectReference Include="..\sampleTest.common\sampleTest.common.csproj" />
   </ItemGroup>
 
 </Project>
