Sql server database used while writing integration test function.It was ensured that the database was deleted during its every test operation.

--- a/sampleTest.api.integrationTest/sampleTest.api.integrationTest.csproj
+++ b/sampleTest.api.integrationTest/sampleTest.api.integrationTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.7.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
@@ -20,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\sampleTest.api\sampleTest.api.csproj" />
     <ProjectReference Include="..\sampleTest.common\sampleTest.common.csproj" />
+    <Content Include="integrationsettings.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
